Added a function to view the invoice image as a normal size picture

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity
             android:name=".SignInActivity"
             android:exported="true" />
+        <activity
+            android:name=".ImageViewActivity" />
     </application>
 
 </manifest>
