Updated the UI for the expense Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
             android:name=".SignInActivity"
             android:exported="true" />
         <activity android:name=".ImageViewActivity" />
+
+        <activity android:name=".AddExpenseActivity" />
+
     </application>
 
 </manifest>
